--- a/views/clan_games.haml
+++ b/views/clan_games.haml
@@ -1,4 +1,4 @@
-%h2= "Clan Games"
+=h2 'Clan Games'
 .scorelisting#no-more-tables
   %table.greytable.cf
     %thead.cf
@@ -6,8 +6,6 @@
         %th Name
         %th Variant
         %th Server
-        %th Points
-        %th log
         %th Conducts
         %th Medusa
         -# download column
@@ -20,8 +18,6 @@
           %a{:href => "/user_id/#{game.user_id}"}= h game.name
         %td{"data-title" => "Name"}= h game.variant_name
         %td{"data-title" => "Server"}= h game.server.hostname
-        %td.table_number{"data-title" => "Points"}= game.points
-        %td.table_number{"data-title" => "log"}= game.points.to_s.length-1
         %td.small_number{"data-title" => "Conducts"}= game.version != "NH-1.3d" && game.nconducts == 0 ? "yes" : "no"
         %td.small_cell{"data-title" => "Medusa"}= h game.defeated_medusa? ? "yes" : "no"
         %td.dllink
