--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -17,3 +17,5 @@
       =haml :clan_competition_trophy
       - @trophy = "most_full_conducts_broken"
       =haml :clan_competition_trophy
+      - @trophy = "lowest_turns_for_monster_kills"
+      =haml :clan_competition_trophy
