--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -165,5 +165,9 @@
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-full-conducts-broken.png"}
             %span
               Most games with all conducts broken
+          %li#clan-lowest-turns-for-monster-kills
+            %img{style: "vertical-align:middle", alt: "", src: "/icons/clan-lowest-turns-for-monster-kills.png"}
+            %span
+              ="Lowest sum of turns of getting killed by specific monsters (#{$clan_killed_by.join ', '})"
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
