--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -168,6 +168,6 @@
           %li#clan-lowest-turns-for-monster-kills
             %img{style: "vertical-align:middle", alt: "", src: "/icons/clan-lowest-turns-for-monster-kills.png"}
             %span
-              ="Lowest sum of turns of getting killed by specific monsters (#{$clan_killed_by.join ', '})"
+              ="Lowest sum of the turns of the #{$clan_killed_by.count} games where clan members were getting killed by each of the monsters in this list: #{$clan_killed_by.sort.join ', '}."
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
