--- a/views/player_scoreboard.haml
+++ b/views/player_scoreboard.haml
@@ -5,10 +5,12 @@
       %h2
         Player scoreboard
     %section#page_outline.text_content
+      .list
       - $variant_order.each do |variant|
         - variant_name = $variants_mapping[variant]
-        %p
-          %a{href: "##{link_id variant_name}"}= variant_name
+        %a{href: "##{link_id variant_name}"}= variant_name
+        %br
+
     - $variant_order.each do |variant|
       - variant_name = $variants_mapping[variant]
       %section.text_content
