--- a/views/_clan_trophies.haml
+++ b/views/_clan_trophies.haml
@@ -13,6 +13,6 @@
           %a{:href => "/clan/#{CGI::escape entry.clan.name}"}
             #{h entry.clan.name}
         %td.table_number
-          #{h entry.points}
+          #{h "%.2f" % entry.points}
         %td.table_number
           #{h entry.rank}
