Align trophies on clan page in rows as on player page

--- a/views/clan_user_trophies.haml
+++ b/views/clan_user_trophies.haml
@@ -22,5 +22,13 @@
         / user trophies
         - trophies = Trophy.user_trophies variant
         - user_trophies = repository.adapter.select "select trophy from scoreentries where user_id in (#{user_ids.join(',')}) and variant = ?", variant
+        - row = 1
         - for trophy in trophies
-            =haml :trophy, :locals => {:trophy => trophy, :achieved => (user_trophies.include? trophy.trophy)}
+            - newline = trophy.row != row
+            - row = trophy.row
+            - if newline
+                %br
+            =haml :trophy, locals: { trophy: trophy, achieved: (user_trophies.include? trophy.trophy)}
+            -# workaround for the fact that the master of thieves is a quest leader and nemesis
+            - if trophy.trophy == 'defeated_ashikaga_takauji' && (trophy = Trophy.first(variant: variant, trophy: 'defeated_master_of_thieves'))
+                =haml :trophy, locals: { trophy: trophy, achieved: (user_trophies.include? trophy.trophy)}
