Fix archive link in menu

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -63,7 +63,7 @@
                 %li
                   %a{:href => "/servers"} Servers
             %li
-              %a{hiref: '/archive/2017/index.html'} Archives
+              %a{href: '/archive/2017/index.html'} Archives
               %ul.nested
                 %li
                   %a{:href => "/archive/2017/index.html"} 2017 tournament
