--- a/views/clan_competition_trophy.haml
+++ b/views/clan_competition_trophy.haml
@@ -5,6 +5,7 @@
 .scorelisting
   %table.greytable
     %tr
+      %th{style: 'width: 1.25em'}
       %th
         Clan
       %th.competition_value
@@ -14,6 +15,9 @@
         Rank
     - ClanScoreEntry.all(:order => [:rank.asc], :trophy => @trophy, :value.gt => 0).each do |entry|
       %tr
+        %td
+          %span
+            %img{src: entry.clan.gravatar_link, style: 'vertical-align: middle; width: 100%'}
         %td
           %a{:href => "/clan/#{CGI::escape entry.clan.name}"}
             #{h entry.clan.name}
