--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 /* MEYER RESET
 http://meyerweb.com/eric/tools/css/reset/ */
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, pre,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -28,6 +28,13 @@ body {
 ol, ul {
     list-style: none;
 }
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
+}
 /* tables still need 'cellspacing="0"' in the markup */
 table {
     border-collapse: collapse;
@@ -47,6 +54,7 @@ body {
     background-image: url('background.jpg');
     background-repeat: repeat;
     background-position: top center;
+    text-shadow: none;
 }
 a {
     text-decoration: none;
@@ -63,8 +71,8 @@ a.imagelink:hover {
 }
 /* misc */
 #container {
-    width: 95%;
-    margin: 0 auto;
+  width: 96%;
+  margin: 0 auto;
 }
 
 /*****************************************
@@ -74,9 +82,9 @@ a.imagelink:hover {
 *****************************************/
 .footer,
 .text_content_wrapper, #topnav {
-    background-color: #ddd;
-    background-image: linear-gradient(left, #eee 0%, #ddd 15%, #ddd 85%, #eee 100%);
-    border-radius: 10px;
+  background-color: #ddd;
+  background-image: linear-gradient(left, #eee 0%, #ddd 15%, #ddd 85%, #eee 100%);
+  border-radius: 10px;
 }
 /* typical inset rounding and shadowing */
 #topnav,
@@ -250,7 +258,7 @@ submenus
 
 /* The text below the logo on the front page. */
 .title_text {
-    margin: 1.75em;
+    margin: 1.5em;
     font-weight: bold;
     font-size: 1.25em;
     clear: both;
