--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -2,10 +2,12 @@
 %html{"xmlns:og" => "http://ogp.me/ns#"}
   %head
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
-    %link{:href => "/style-mobile.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "/no-more-tables.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{href: "/style-mobile.css",   rel: "stylesheet", type: "text/css"}/
+    %link{href: "/no-more-tables.css", rel: "stylesheet", type: "text/css"}/
     - games_count = Game.count :conditions => [ 'user_id > 0' ]
-    - if games_count == 0 then
+    - if Time.now.to_i < $tournament_signupstarttime
+      %title= 'Junethack'
+    - elsif games_count == 0 then
       %title= "Junethack - #{User.count} players already registered!"
     - else
       %title= "Junethack - #{User.count} players registered - #{games_count} games played!"
@@ -14,6 +16,8 @@
     <meta property="og:url" content="#{request.scheme}://junethack.net/" />
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
     <meta property="og:image" content="#{request.scheme}://junethack.net/apple-touch-icon.png" />
+    <link rel="alternate" type="application/rss+xml" title="Junethack" href="#{request.scheme}://junethack.net/junethack.rss" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Turn off telephone number detection on iOS. -->
