--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -8,47 +8,29 @@
         %h3
           Cross-Variant
         %ul.trophypage.indented
-          %li#walk_in_the_park
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/walk_in_the_park.png"}
-            %span
-              Walk in the Park: finish a game in half of the variants (played for at least 1000 turns).
           %li#sightseeing
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/sightseeing.png"}
+            %img{style: "vertical-align:middle", alt: "", src: "/icons/sightseeing_tour_#{$variant_order.size}.png"}
             %span
-              Sightseeing Tour: finish a game in all variants (played for at least 1000 turns).
-          %li#backpacking_tourist
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/backpacking_tourist.png"}
-            %span
-              Backpacking Tourist: get a trophy for half of the variants.
+              Sightseeing Tour: finish a game in several variants (played for at least 1000 turns).
           %li#globetrotter
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/globetrotter.png"}
+            %img{style: "vertical-align:middle", alt: "", src: "/icons/globetrotter_#{$variant_order.size}.png"}
             %span
-              Globetrotter: get a trophy for each variant.
-          %li#hemi-stoner
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/hemi-stoner.png"}
-            %span
-              Hemi-Stoner: defeat Medusa in half of the variants.
+              Globetrotter: get a trophy in several variants.
           %li#anti-stoner
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/anti-stoner.png"}
+            %img{style: "vertical-align:middle", alt: "", src: "/icons/anti_stoner_#{$variant_order.size}.png"}
             %span
-              Anti-Stoner: defeat Medusa in all variants.
-          %li#prince
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/prince.png"}
+              Anti-Stoner: defeat Medusa in several variants.
+          %li#ascended_variants
+            %img{style: "vertical-align:middle", alt: "", src: "/icons/ascended_variants_#{$variant_order.size}.png"}
             %span
-              Prince of the World: ascend in half of the variants.
-          %li#king
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/king.png"}
-            %span
-              King of the World: ascend in all variants.
+              Diversity Ascender: ascend in several variants.
 
         %p.small_print
-          "All variants" means every variant except NetHack 1.3d.
           NetHack 1.3d does not contribute to the completion of these trophies.
         .text_content.non_top_post
         =h3 'All Variants'
         %p
           These trophies apply separately to each variant (excluding NetHack 1.3d).
-          Each is worth one point.
           %br
           %span.small_print In variants with additional roles or races only 13 roles resp. 5 races (i.e. as many as in vanilla) must be ascended to achieve this trophy.
         %ul.trophypage.indented
