--- a/views/news.haml
+++ b/views/news.haml
@@ -1,4 +1,5 @@
-=h2 'News and Announcements'
 - news = News.all order: [ :created_at.desc ], :created_at.lte => DateTime.now
-- for n in news
-  %article= "<b>#{n.created_at.strftime("%Y-%m-%d")}</b>: #{n.html}"
+- if news.size > 0
+  =h2 'News and Announcements'
+  - for n in news
+    %article= "<b>#{n.created_at.strftime("%Y-%m-%d")}</b>: #{n.html}"
