--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -148,9 +148,9 @@
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-full-conducts-broken.png"}
             %span
               Most games with all conducts broken
-          %li#clan-lowest-turns-for-monster-kills
-            %img{style: "vertical-align:middle", alt: "", src: "/icons/clan-lowest-turns-for-monster-kills.png"}
-            %span
-              ="Lowest sum of the turns of the #{$clan_killed_by.count} games where clan members were getting killed by each of the monsters in this list: #{$clan_killed_by.sort.join ', '}."
+          -#%li#clan-lowest-turns-for-monster-kills
+          -#  %img{style: "vertical-align:middle", alt: "", src: "/icons/clan-lowest-turns-for-monster-kills.png"}
+          -#  %span
+          -#    ="Lowest sum of the turns of the #{$clan_killed_by.count} games where clan members were getting killed by each of the monsters in this list: #{$clan_killed_by.sort.join ', '}."
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
