--- a/views/rules.haml
+++ b/views/rules.haml
@@ -34,9 +34,7 @@
             %a{:href => "http://nethackwiki.com/wiki/Pudding_farming"}pudding farm.
           %li
             %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scum.
-            All games escaped or quit within the first 10 turns or have more
-            than 10 turns but have finished within 10 seconds are hidden on the
-            games tables.
+            All games escaped or quit within the first 10 turns are hidden on the games tables.
           %li
             look at player 
             %a{:href => "http://nethackwiki.com/wiki/Dumplog"}dumplogs.
