--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -2,19 +2,24 @@
   .text_content_wrapper
     / This h2 should be in the branding section
     %section.text_content
-      %h2 Scoreboard
-    %section.text_content
+      %h2 Clan Scoreboard
       =haml :_clan_trophies
+    .text_content.non_top_post
       - @trophy = "most_ascended_combinations"
       =haml :clan_competition_trophy
+    .text_content.non_top_post
       - @trophy = "most_unique_deaths"
       =haml :clan_competition_trophy
+    .text_content.non_top_post
       - @trophy = "most_ascensions_in_a_24_hour_period"
       =haml :clan_competition_trophy
+    .text_content.non_top_post
       - @trophy = "most_variant_trophy_combinations"
       =haml :clan_competition_trophy
+    .text_content.non_top_post
       - @trophy = "most_medusa_kills"
       =haml :clan_competition_trophy
+    .text_content.non_top_post
       - @trophy = "most_full_conducts_broken"
       =haml :clan_competition_trophy
       -#- @trophy = "lowest_turns_for_monster_kills"
