--- a/views/activity.haml
+++ b/views/activity.haml
@@ -22,7 +22,7 @@
             -# table data
             - today = Time.now.to_i
             - $tournament_starttime.step($tournament_endtime,86400).each do |datum|
-              - if today > datum then
+              - if today > datum && datum < $tournament_endtime then
                 %tr
                   - formatted_date = h Time.at(datum).getutc.strftime("%Y-%m-%d")
                   %td.table_date= "<a class='hidden_link' href='/games/#{formatted_date}'>#{formatted_date}</a>"
