--- a/views/trophy_scoreboard.haml
+++ b/views/trophy_scoreboard.haml
@@ -51,7 +51,7 @@
             %li
               - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id from scoreentries where variant = ? and trophy = ? order by upper(user);", variant, trophy.trophy
               - icon = (users.size > 0) ? trophy.icon : trophy.light_icon
-              %a.imagelink{:title => trophy.text, :href => "/trophies##{trophy.anchor}"}
+              %a.imagelink{:title => trophy.text, :href => "/trophies/#{variant_name.downcase}##{trophy.trophy}"}
                 %img.trophyleft{:src => "/icons/#{icon}", :alt => trophy.text}
               .trophyright
                 - users.each do |u|
