Links all tournaments from mobile layout

--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -71,8 +71,12 @@
                   %li
                     %a{:href => "/post_tournament_statistics"} Post Tournament Statistics
             %li
-              %a{href: '/archive/2018/index.html'} Archives
+              %a{href: '/archive/2020/index.html'} Archives
               %ul.nested
+                %li
+                  %a{:href => "/archive/2020/index.html"} 2020 tournament
+                %li
+                  %a{:href => "/archive/2019/index.html"} 2019 tournament
                 %li
                   %a{:href => "/archive/2018/index.html"} 2018 tournament
                 %li
