Update the contact info on the about page

--- a/views/about.haml
+++ b/views/about.haml
@@ -22,10 +22,16 @@
     .text_content.non_top_post
       %p
         Our points of contact are the
-        %a{:href => "irc://chat.freenode.net/junethack"}#junethack IRC channel
-        on the Freenode IRC network and
+        %a{:href => "ircs://irc.libera.chat:6697/junethack"}#junethack IRC channel
+        on the
+        %a{:href => "https://nethackwiki.com/wiki/Libera"}Libera.Chat
+        IRC network,
+        the <a href="https://www.reddit.com/r/nethack/">nethack subreddit</a>,
+        and
         %a{:href => "http://nethackwiki.com/wiki/rec.games.roguelike.nethack"}rec.games.roguelike.nethack
         newsgroup.
+        %br
+        There’s also a dedicated discord channel <a href="https://discord.gg/AKUy6RG">#nethack-junethack</a> on the Roguelikes discord channel which is synced with the IRC channel.
     .text_content.non_top_post
       %p
         This website and the underlying software has been developed by the
