--- a/views/activity.haml
+++ b/views/activity.haml
@@ -36,6 +36,38 @@
                 - finished_variant_games = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ?;", v)[0]
                 %td.table_number= "<a class='hidden_link' href='/games/#{v}'>#{finished_variant_games}</a>"
 
+    - cache_fragment("games_variants_ascended_#{Game.max_endtime}") do
+      .text_content
+        %h2 Ascensions per Day and Variant
+        .scorelisting
+          %table.greytable.misc
+            -# table header
+            %tr.rotated
+              %th
+                %div Date (UTC)
+              - $variant_order.each do |v|
+                %th
+                  %div= $variants_mapping[v]
+
+            -# table data
+            - today = Time.now.to_i
+            - $tournament_starttime.step($tournament_endtime,86400).each do |datum|
+              - if today > datum && datum < $tournament_endtime then
+                %tr
+                  - formatted_date = h Time.at(datum).getutc.strftime("%Y-%m-%d")
+                  %td.table_date= "<a class='hidden_link' href='/ascensions/#{formatted_date}'>#{formatted_date}</a>"
+                  - $variant_order.each do |v|
+                    - ascended_variant_games_per_day = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ? and endtime >= ? and endtime < ? and ascended = 't';", v, datum, datum+86400)[0]
+                    - ascended_variant_games_per_day = '' if ascended_variant_games_per_day == 0
+                    %td.table_number= "<a class='hidden_link' href='/ascensions/#{formatted_date}/#{v}'>#{ascended_variant_games_per_day}</a>"
+            -# Total number of tournament games per variant
+            %tr
+              %td.table_date= "Total"
+              - $variant_order.each do |v|
+                - ascended_variant_games = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ? and ascended = 't';", v)[0]
+                - ascended_variant_games = '' if ascended_variant_games == 0
+                %td.table_number= "<a class='hidden_link' href='/ascensions/#{v}'>#{ascended_variant_games}</a>"
+
     - cache_fragment("games_#{Game.max_endtime}") do
       - @finished_games_per_day = repository.adapter.select "select datum, count(1) as count from (select date(endtime, 'unixepoch') as datum from games where user_id is not null) group by datum order by datum asc;"
       .text_content.non_top_post
