--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -69,7 +69,7 @@
             - variant_name = $variants_mapping[variant]
             %span{style: 'padding-left: 1em'}
               %a{href: "/trophies/#{variant_name.downcase}"}= h variant_name
-              = "(#{Trophy.all(variant: variant).count} achievements)"
+              = "(#{Trophy.all(variant: variant, conditions: ["trophy not like 'all_%' AND user_competition = 'f'"]).count} achievements)"
             %br
         .text_content.non_top_post
 
